# crabreduce

./: Cargo.toml  run-master.sh
client/: Cargo.toml
common/: Cargo.toml
common/src/: tracing.rs
common/src/types/: client_id.rs  job.rs  kv.rs  mod.rs  mutex.rs  node_id.rs  worker.rs
coordinator/: Cargo.toml  build.rs
coordinator/proto/: echo.proto
coordinator/src/: main.rs
coordinator/src/node/: master.rs
crab_fs/: Cargo.toml
crab_fs/src/: lib.rs  metadata.rs
crab_fs/src/files/: mod.rs  writer.rs
crab_master/: Cargo.toml  build.rs
crab_master/proto/: crab_master_service.proto  id.proto
crab_master/proto/requests/: heartbeat.proto
crab_master/proto/responses/: heartbeat.proto  register.proto
crab_master/src/: main.rs
crab_master/src/node/: janitor.rs  master.rs  mod.rs  rpc.rs  worker.rs
crab_worker/: Cargo.toml  build.rs
crab_worker/src/worker/: daemon.rs  heartbeat.rs  master_client.rs  mod.rs  uni_worker.rs
worker/: Cargo.toml  build.rs
worker/proto/requests/: heartbeat.proto  register.proto
worker/src/: lib.rs  main.rs
worker/src/worker/: heartbeat.rs  master_client.rs  mod.rs  rpc_client.rs  uni_worker.rs
