[workspace]
members = ["client", "worker", "crab_master", "common"]
resolver = "3"

[workspace.dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
common = { path = "../common" }
anyhow = "1.0.98"
thiserror = "2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = { version = "0.3.31", features = ["std"] }
