[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.13"
# Use futures maybe... instead of tokio... so it's abstracted away...
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
common = { path = "../common" }
anyhow = "1.0.98"
thiserror = { workspace = true }
gethostname = "1.0.1"
tracing = { workspace = true }
futures = { workspace = true }
mockall = { version = "0.13.1" }

[build-dependencies]
tonic-build = "*"

[dev-dependencies]

[features]
default = ["tokio"]
tokio = []
